Fix z-index for Tutorial

--- a/static/Tutorial.scss
+++ b/static/Tutorial.scss
@@ -1,7 +1,7 @@
 @import "Common.scss";
 
 .Tutorial {
-  z-index: 100 !important;
+  z-index: 10 !important;
   // display: inline-block;
   position: sticky;
   background-color: $color-bg-extra-light;
